[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/game_gameOver.gd" type="Script" id=1]
[ext_resource path="res://sprites/gui/bg.png" type="Texture" id=2]
[ext_resource path="res://sprites/gui/logo.png" type="Texture" id=3]
[ext_resource path="res://sprites/gui/ranking.png" type="Texture" id=4]
[ext_resource path="res://fontes/PixelOperator.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 210, 360 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 5 )

[sub_resource type="Animation" id=5]
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("ranking:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.3, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -720 ), Vector2( 0, 32 ), Vector2( 0, -16 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("logo:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("player_score:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.9, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("name:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.9, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("score:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.9, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[node name="game_gameOver" type="Node2D"]
script = ExtResource( 1 )

[node name="bg" type="Sprite" parent="."]
modulate = Color( 0.0784314, 0.203922, 0.392157, 1 )
texture = ExtResource( 2 )
centered = false

[node name="logo" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 210, 80 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 3 )

[node name="HTTP_get" type="HTTPRequest" parent="."]

[node name="HTTP_add" type="HTTPRequest" parent="."]

[node name="HTTP_remove" type="HTTPRequest" parent="."]

[node name="ranking" type="Node2D" parent="."]
editor/display_folded = true
position = Vector2( 0, -720 )

[node name="bg" type="Sprite" parent="ranking"]
position = Vector2( 210, 360 )
texture = ExtResource( 4 )

[node name="txt_player" type="Label" parent="ranking"]
margin_left = 112.0
margin_top = 209.0
margin_right = 210.0
margin_bottom = 225.0
custom_fonts/font = SubResource( 1 )
text = "Player"
align = 1

[node name="txt_score" type="Label" parent="ranking"]
margin_left = 210.0
margin_top = 209.0
margin_right = 308.0
margin_bottom = 225.0
custom_fonts/font = SubResource( 1 )
text = "Score"
align = 1

[node name="name" type="Label" parent="."]
visible = false
margin_left = 112.0
margin_top = 241.0
margin_right = 210.0
margin_bottom = 257.0
custom_fonts/font = SubResource( 1 )
align = 1

[node name="score" type="Label" parent="."]
visible = false
margin_left = 210.0
margin_top = 241.0
margin_right = 308.0
margin_bottom = 257.0
custom_fonts/font = SubResource( 1 )
align = 1

[node name="player_score" type="Label" parent="."]
margin_top = 550.0
margin_right = 420.0
margin_bottom = 580.0
custom_fonts/font = SubResource( 2 )
align = 1
valign = 1

[node name="change" type="TouchScreenButton" parent="."]
position = Vector2( 210, 360 )
shape = SubResource( 3 )

[node name="conect_wait" type="Label" parent="."]
margin_top = 670.0
margin_right = 420.0
margin_bottom = 702.0
custom_fonts/font = SubResource( 4 )
text = "Esperando por Conex√£o"
align = 1
valign = 1

[node name="anim" type="AnimationPlayer" parent="."]
autoplay = "anim"
anims/anim = SubResource( 5 )

[connection signal="request_completed" from="HTTP_get" to="." method="_on_HTTP_get_request_completed"]
[connection signal="request_completed" from="HTTP_add" to="." method="_on_HTTP_add_request_completed"]
[connection signal="pressed" from="change" to="." method="_on_change_pressed"]
